--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     volumes:
       - ./saleor-storefront/:/app:cached
       - /app/node_modules/
+      - .:/saleor-storefront
     command: npm start -- --host 0.0.0.0
 
   dashboard:
@@ -51,6 +52,7 @@ services:
     volumes:
       - ./saleor-dashboard/:/app:cached
       - /app/node_modules/
+      - .:/saleor-storefront
     command: npm start -- --host 0.0.0.0
 
   db:
